# EPL-Pipeline-Doctor-Env

./: .gitignore  .openenvignore  HTTP_API_REFERENCE.md  KUBE_OPTIMIZATIONS_ANALYSIS.md  NEW_FILES.txt  OPTIMIZATION_SUMMARY.md  RAW_SQL_COMMANDS.md  README.md  WORKFLOW_TOOLS_SUMMARY.md  WORKFLOW_TRACING.md  __init__.py  client.py  conftest.py  debug_training_trace.py  eval.py  example_raw_sql_episode.py  logs.txt  models.py  openenv.yaml  plot_rewards.py  plot_training_rewards.py  pyproject.toml  test.py  train.py  train_traced.py  verify_dense_reward.py  verify_dense_reward_with_fix.py  workflow_trace.py
notebooks/: train_colab.ipynb
server/: Dockerfile  __init__.py  adversarial_designer.py  app.py  constants.py  curriculum.py  etl_pipeline_doctor_environment.py  fault_catalogue.py  fault_injector.py  llm_client.py  llm_judge.py  llm_providers.py  provider_state.py  requirements.txt  reward.py  tool_handlers.py  warehouse.py
server/prompts/: designer_system.md  judge_system.md
training/grpo-output/: README.md  reward_log_2026-04-22_12-42-29.csv  reward_log_2026-04-22_12-47-42.csv  reward_log_2026-04-22_12-48-47.csv  reward_log_2026-04-22_12-56-01.csv
training/grpo-output/checkpoint-1/: adapter_config.json
training/grpo-output/checkpoint-100/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
training/grpo-output/checkpoint-150/: rng_state.pth  scheduler.pt  trainer_state.json
training/grpo-output/checkpoint-200/: adapter_config.json  rng_state.pth  trainer_state.json
training/grpo-output/checkpoint-50/: adapter_config.json  scheduler.pt  (+2 more)
